Fixed header text to be aligned

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ header {
 
 header h1 {
 	font-size: 4rem;
+	display: inline-block;
 }
 
 .instructions{
